@@ -1,3 +1,8 @@
+Mon Jun  1 06:39:57 2009  Minero Aoki  <aamine@loveruby.net>
+
+	* net/loveruby/cflat/sysdep/x86/CodeGenerator.java: refactoring:
+	  rename method: save -> store.
+
 Mon Jun  1 05:43:13 2009  Minero Aoki  <aamine@loveruby.net>
 
 	* net/loveruby/cflat/sysdep/x86/CodeGenerator.java (load, save):
